--- a/index.html
+++ b/index.html
@@ -18,10 +18,17 @@
         <select id="away-team"></select>
     </div>
 
-    <div id="team-display" class="team-section">
-        <h2>Team Details</h2>
-        <div id="home-team-details"></div>
-        <div id="away-team-details"></div>
+    <div id="team-display" class="team-section" style="display: flex; justify-content: space-between;">
+        <div id="home-team-details">
+            <h3>Home Team Roster</h3>
+            <ul id="home-team-offense"></ul>
+            <ul id="home-team-defense"></ul>
+        </div>
+        <div id="away-team-details">
+            <h3>Away Team Roster</h3>
+            <ul id="away-team-offense"></ul>
+            <ul id="away-team-defense"></ul>
+        </div>
     </div>
 
     <div class="controls-section">
